--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       text-decoration: none;
     }
     
-    a:visited{
+    a:active, a:visited{
       color:rgba(3, 64, 85, 255)
     }
     
