--- a/trigonometry.html
+++ b/trigonometry.html
@@ -97,6 +97,15 @@
         </div>
     </div>
     <br>
+    <br>
+    <div class="main">
+        <div class="a1">
+            <p style="text-align:center;text-transform: uppercase;"><b>Trigonometry Table</b></p>
+            <img src="https://i.ytimg.com/vi/ucDa1O5w_zQ/maxresdefault.jpg" height="290px">
+            <br>
+            <br>
+        </div>
+    </div>
 </body>
 
 </html>
