--- a/index.html
+++ b/index.html
@@ -41,14 +41,10 @@
       text-decoration: none;
     }
     
-    a:active, a:visited{
+    a:link{
       color:rgba(3, 64, 85, 255)
     }
-    
-    a:hover{
-      color: rgba(3, 64, 85, 255)
-    }
-
+  
     .ti{
       visibility:hidden
     }
