--- a/trigonometry.html
+++ b/trigonometry.html
@@ -105,7 +105,20 @@
             <br>
             <br>
         </div>
+        <div class="a2">
+            <p style="text-align:center;text-transform: uppercase;"><b>Trigonometry Identities</b></p>
+            <p>Some of the trigonometic identities are:</p>
+            <ul type="circle">
+                <li>sin<sup>2</sup> θ + cos<sup>2</sup> θ = 1</li>
+                <li>cosec<sup>2</sup> θ - cot<sup>2</sup> θ = 1</li>
+                <li>sec<sup>2</sup> θ - tan<sup>2</sup> θ = 1</li>
+                <li>(1 + tan θ + sec θ)(1 + cot θ - cosec θ) = 2</li>
+            </ul>
+            <br>
+            <br>
+        </div>
     </div>
+    <br>
 </body>
 
 </html>
