--- a/trigonometry.html
+++ b/trigonometry.html
@@ -113,11 +113,14 @@
                 <li>cosec<sup>2</sup> θ - cot<sup>2</sup> θ = 1</li>
                 <li>sec<sup>2</sup> θ - tan<sup>2</sup> θ = 1</li>
                 <li>(1 + tan θ + sec θ)(1 + cot θ - cosec θ) = 2</li>
+                <li>sec θ (1 - sin θ + sec θ)(sec θ + tan θ) = 1</li>
+                <li>(sec θ + tan θ)(1 - sin θ) = cos θ</li>
+                <li> 1 + tan<sup>2</sup> θ / 1 + cot<sup>2</sup> θ = tan<sup>2</sup> θ</li>
             </ul>
-            <br>
-            <br>
+        </div>
         </div>
     </div>
+    <br>
     <br>
 </body>
 
