--- a/trigonometry.html
+++ b/trigonometry.html
@@ -116,7 +116,9 @@
                 <li>sec θ (1 - sin θ + sec θ)(sec θ + tan θ) = 1</li>
                 <li>(sec θ + tan θ)(1 - sin θ) = cos θ</li>
                 <li> 1 + tan<sup>2</sup> θ / 1 + cot<sup>2</sup> θ = tan<sup>2</sup> θ</li>
+                <li>cos θ / 1 - tan θ + sin θ / 1 - cot θ = sin θ + cos θ</li>
             </ul>
+            <br>
         </div>
         </div>
     </div>
